fix(frontend): update spacings

--- a/web/src/app/shared/components/sidesheet/sidesheet.component.scss
+++ b/web/src/app/shared/components/sidesheet/sidesheet.component.scss
@@ -62,7 +62,7 @@
         @include transition(all, 0.2s, ease);
 
         .icon {
-            transform: translateY(2px);
+            transform: translateY(1px);
         }
 
         &:hover {
